fix contact me header div alignment

--- a/style.css
+++ b/style.css
@@ -163,11 +163,9 @@ section{
 @keyframes moveInLeft {
     0%{
         opacity:0;
-        /* transform: translateX(-100px); */
     }
     100%{
         opacity:1;
-        /* transform: translateX(0); */
     }
 }
 
@@ -196,20 +194,7 @@ section{
   }
 
 
-/***************** up arrow **********************/
 
-.scroll-up{
-    position: fixed;
-    right: 1.8%;
-    bottom: 4%;
-    cursor:pointer;
-    z-index: 100;
-}
-.up-arrow{
-    width:3rem;
-    height: 3rem;
-}
-/************************************************/
 /******************** Projects Section **************************/
 
 #projects .container{
@@ -257,8 +242,14 @@ section{
 
 .contact-me{
     position:relative;
+  
+}
+.socials-and-form-container{
     display:flex;
     flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100vh;
 }
 .socials-container{
 
@@ -266,6 +257,8 @@ section{
 }
 .socials-row{
     display:flex;
+    justify-content: center;
+    align-items: center;
 }
  .socials-row img{
     width:100px;
@@ -296,18 +289,17 @@ section{
     justify-content: center;
 }
  .registration-form{
-	padding: 50px 0;
+	padding: 30px 0;
 }
 
 .registration-form form{
-    /* background-color: #fff; */
     background-color:hsl(228, 5%, 20%);
     color:#e2e2e2;
     max-width: 600px;
+    max-height: 600px;
     margin: auto;
     padding: 40px 70px;
-    /* border-top-left-radius: 30px;
-    border-top-right-radius: 30px; */
+
     border-radius: 20px;
     opacity: 0.99;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
@@ -413,6 +405,20 @@ footer p{
 }
 /***************************************/
 
+/***************** up arrow **********************/
+
+.scroll-up{
+    position: fixed;
+    right: 1.8%;
+    bottom: 4%;
+    cursor:pointer;
+    z-index: 100;
+}
+.up-arrow{
+    width:3rem;
+    height: 3rem;
+}
+/************************************************/
 
 /***************** typography **********************/
 .typedtext{
